# mhy_parking2

./: CMakeLists.txt  README.md  corridor_parking.cc  corridor_test.cc  main.cc  readme.md
coarse_trajectory_generator/: CMakeLists.txt  grid_search.cc  grid_search.h  hybrid_a_star.cc  hybrid_a_star.h  node3d.cc  node3d.h  readme.md  readme.txt  reeds_shepp_path.cc  reeds_shepp_path.h
common/: pnc_point.h
common/math/: CMakeLists.txt  linear_interpolation.cc  linear_interpolation.h  vec2d.cc  vec2d.h
common/matplot/: CMakeLists.txt
common/util/: CMakeLists.txt  point_factory.h
configs/: CMakeLists.txt  planner_open_space_config.h  vehicle_config.h  vehicle_config_helper.h
open_space_map/: CMakeLists.txt  open_space_map obca_mhy.cc  open_space_map.cc  open_space_map.h  open_space_map_obca_mhy.h
open_space_trajectory_optimizer/: CMakeLists.txt  open_space_trajectory_optimizer.cc  open_space_trajectory_optimizer.h
planning_data/: CMakeLists.txt
planning_data/path/: discretized_path.cc
planning_data/piecewise_jerk/: OSQP_Guide.md  PiecewiseJerkSpeedProblem_Usage_Guide.md  discretized_path.h  piecewise_jerk_problem.cc  piecewise_jerk_problem.h  piecewise_jerk_speed_problem.cc  piecewise_jerk_speed_problem.h
planning_data/speed/: speed_data.cc  speed_data.h
planning_data/trajectory/: discretized_trajectory.cc  discretized_trajectory.h  discretized_trajectory_composition.h
result/2026_01_27_17_45_59/: planning_info.txt
result/2026_01_27_17_48_41/: planning_info.txt
result/2026_01_27_17_55_26/: planning_info.txt
result/2026_01_27_18_05_57/: planning_info.txt
result/2026_01_27_18_07_38/: hybrid_astar.csv  planning_info.txt
result/2026_01_27_18_10_50/: optimized_trajectory.csv  planning_info.txt
result/2026_01_27_18_11_28/: planning_info.txt
result/2026_01_27_18_12_19/: planning_info.txt
safe_corridor_trajectory_optimizer/: construct_driving_corridor.cc  distance_approach_ipopt_corridor_interface.cc  distance_approach_ipopt_corridor_interface.h  open_space_trajectory_optimizer.cc  open_space_trajectory_optimizer.h  readme.txt  safe_corridor_parking_test.cc
scripts/: plot_result.py
test/: ipopt_corridor_interface.cc  ipopt_corridor_interface.h  ipopt_corridor_problem.cc  ipopt_corridor_problem.h
trajectory_smoother/: CMakeLists.txt  construct_driving_corridor.cc  construct_driving_corridor.h  distance_approach_apollo_problem.h  distance_approach_interface.h  distance_approach_ipopt_corridor_interface.cc  distance_approach_ipopt_interface.cc  distance_approach_ipopt_interface.h  distance_approach_ipopt_relax_end_interface.h  distance_approach_ipopt_relax_end_slack_interface.h  distance_approach_problem.cc  distance_approach_problem.h
